--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,6 @@ yarn-error.log*
 .env.production.local
 
 # vercel
-.vercel
-/next.config.js
-next.config.js
+# .vercel
+# /next.config.js
+# next.config.js
